# mc-shot-sync

./: .gitattributes  .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
mc_shot_sync/: __init__.py  cli.py  clipboard.py  config.py  core.py  gitpush.py  tray.py
tests/: test_basic.py
